--- a/EgitimPlatformuAI/Views/ReadingScreen/ReadingAnswersCellNib/ReadingTableViewCell.xib
+++ b/EgitimPlatformuAI/Views/ReadingScreen/ReadingAnswersCellNib/ReadingTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="ReadingTableViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="ReadingTableViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -50,8 +50,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="answerText" destination="QI2-2h-VsW" id="hrz-zx-z3d"/>
+                <outlet property="containerView" destination="FnY-6o-u9A" id="a2f-Zh-Zzh"/>
             </connections>
             <point key="canvasLocation" x="132.82442748091603" y="5.2816901408450709"/>
         </tableViewCell>
