--- a/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,21 +17,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0Ch-zo-uFi">
-                                <rect key="frame" x="16" y="99" width="361" height="703"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0Ch-zo-uFi">
+                                <rect key="frame" x="16" y="99" width="361" height="659.33333333333337"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RP5-2U-vwP">
-                                        <rect key="frame" x="0.0" y="0.0" width="361" height="346.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="329.66666666666669"/>
                                         <subviews>
-                                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NjP-Qa-BqE">
-                                                <rect key="frame" x="8" y="8" width="345" height="330.66666666666669"/>
+                                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjP-Qa-BqE">
+                                                <rect key="frame" x="8" y="8" width="345" height="313.66666666666669"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fld-Au-PDt">
                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="475.33333333333331"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGT-TG-VRA">
                                                                 <rect key="frame" x="0.0" y="0.0" width="345" height="475.33333333333331"/>
-                                                                <mutableString key="text">Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum.</mutableString>
+                                                                <string key="text">Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum.</string>
                                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                 <color key="textColor" name="porcelain"/>
                                                                 <nil key="highlightedColor"/>
@@ -64,9 +65,10 @@
                                             <constraint firstItem="NjP-Qa-BqE" firstAttribute="top" secondItem="RP5-2U-vwP" secondAttribute="topMargin" id="kt9-N9-SMs"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4bH-jg-GvT">
-                                        <rect key="frame" x="0.0" y="356.66666666666674" width="361" height="346.33333333333326"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4bH-jg-GvT">
+                                        <rect key="frame" x="0.0" y="329.66666666666663" width="361" height="329.66666666666663"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="sectionIndexColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -86,20 +88,44 @@
                                     <constraint firstAttribute="height" constant="40" id="C2x-nc-eek"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CtN-zR-ZsB">
+                                <rect key="frame" x="26" y="773" width="341" height="35"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Fuw-yh-JSz"/>
+                                </constraints>
+                                <color key="tintColor" name="porcelain"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Check">
+                                    <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="checkButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="TwD-ry-xJF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
-                            <constraint firstItem="0Ch-zo-uFi" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="-16" id="WT1-aq-7Zo"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="top" secondItem="0Ch-zo-uFi" secondAttribute="bottom" constant="14.666666666666629" id="1kF-Tb-3Vf"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="-10" id="II4-Am-VSd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0Ch-zo-uFi" secondAttribute="trailing" constant="16" id="aN4-LB-tco"/>
                             <constraint firstItem="0Ch-zo-uFi" firstAttribute="top" secondItem="Ipu-xd-vvc" secondAttribute="bottom" id="gYw-5q-mzI"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="CtN-zR-ZsB" secondAttribute="trailing" constant="26" id="kD0-M6-ZY9"/>
                             <constraint firstItem="0Ch-zo-uFi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="uAn-Dp-QGr"/>
                             <constraint firstItem="Ipu-xd-vvc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="xvJ-jT-tmq"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="26" id="zDA-A4-odP"/>
                             <constraint firstItem="Ipu-xd-vvc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="znb-lZ-xqh"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backButton" destination="Ipu-xd-vvc" id="U0Q-YG-fbn"/>
+                        <outlet property="checkButton" destination="CtN-zR-ZsB" id="oRH-bk-8v1"/>
                         <outlet property="tableView" destination="4bH-jg-GvT" id="DcK-yk-Eq0"/>
                     </connections>
                 </viewController>
@@ -115,5 +141,8 @@
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
