--- a/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0Ch-zo-uFi">
-                                <rect key="frame" x="16" y="99" width="361" height="659.33333333333337"/>
+                                <rect key="frame" x="16" y="99" width="361" height="674"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RP5-2U-vwP">
-                                        <rect key="frame" x="0.0" y="0.0" width="361" height="329.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="337"/>
                                         <subviews>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjP-Qa-BqE">
-                                                <rect key="frame" x="8" y="8" width="345" height="313.66666666666669"/>
+                                                <rect key="frame" x="8" y="8" width="345" height="321"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fld-Au-PDt">
                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="475.33333333333331"/>
@@ -65,19 +65,73 @@
                                             <constraint firstItem="NjP-Qa-BqE" firstAttribute="top" secondItem="RP5-2U-vwP" secondAttribute="topMargin" id="kt9-N9-SMs"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4bH-jg-GvT">
-                                        <rect key="frame" x="0.0" y="329.66666666666663" width="361" height="329.66666666666663"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dC-As-IGx">
+                                        <rect key="frame" x="0.0" y="337" width="361" height="337"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SorusorusosrusorsursosruSorusorusosrusorsursosruSorusorusosrusorsursosru" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TGQ-2m-l1I">
+                                                <rect key="frame" x="0.0" y="0.0" width="361" height="40"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                                <color key="textColor" name="porcelain"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="75" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4bH-jg-GvT">
+                                                <rect key="frame" x="0.0" y="40" width="361" height="297"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="sectionIndexColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZAM-nK-knU">
+                                                        <rect key="frame" x="0.0" y="50" width="361" height="75"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZAM-nK-knU" id="mKo-JZ-2A1">
+                                                            <rect key="frame" x="0.0" y="0.0" width="361" height="75"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="xG2-nq-2dw">
+                                                        <rect key="frame" x="0.0" y="125" width="361" height="75"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xG2-nq-2dw" id="4QP-Zl-rfT">
+                                                            <rect key="frame" x="0.0" y="0.0" width="361" height="75"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="cwl-Ic-GML">
+                                                        <rect key="frame" x="0.0" y="200" width="361" height="75"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cwl-Ic-GML" id="kug-0E-T1Q">
+                                                            <rect key="frame" x="0.0" y="0.0" width="361" height="75"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Oer-13-6Xe">
+                                                        <rect key="frame" x="0.0" y="275" width="361" height="75"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Oer-13-6Xe" id="Ubs-GF-ALN">
+                                                            <rect key="frame" x="0.0" y="0.0" width="361" height="75"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                                <sections/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="Qyf-vo-mX4"/>
+                                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="Fwo-QM-22P"/>
+                                                </connections>
+                                            </tableView>
+                                        </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="sectionIndexColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="Qyf-vo-mX4"/>
-                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="Fwo-QM-22P"/>
-                                        </connections>
-                                    </tableView>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4bH-jg-GvT" secondAttribute="trailing" id="AXp-uT-HJW"/>
+                                            <constraint firstItem="4bH-jg-GvT" firstAttribute="leading" secondItem="8dC-As-IGx" secondAttribute="leading" id="EkS-vY-5k9"/>
+                                            <constraint firstItem="4bH-jg-GvT" firstAttribute="top" secondItem="TGQ-2m-l1I" secondAttribute="bottom" id="NVR-b9-x5g"/>
+                                            <constraint firstAttribute="bottom" secondItem="4bH-jg-GvT" secondAttribute="bottom" id="akS-Ou-9Kw"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ipu-xd-vvc" customClass="CustomBackButtonView" customModule="EgitimPlatformuAI" customModuleProvider="target">
@@ -89,7 +143,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CtN-zR-ZsB">
-                                <rect key="frame" x="26" y="773" width="341" height="35"/>
+                                <rect key="frame" x="30" y="783" width="333" height="35"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Fuw-yh-JSz"/>
@@ -112,14 +166,14 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
-                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="top" secondItem="0Ch-zo-uFi" secondAttribute="bottom" constant="14.666666666666629" id="1kF-Tb-3Vf"/>
-                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="-10" id="II4-Am-VSd"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="top" secondItem="0Ch-zo-uFi" secondAttribute="bottom" constant="10" id="1kF-Tb-3Vf"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="II4-Am-VSd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0Ch-zo-uFi" secondAttribute="trailing" constant="16" id="aN4-LB-tco"/>
                             <constraint firstItem="0Ch-zo-uFi" firstAttribute="top" secondItem="Ipu-xd-vvc" secondAttribute="bottom" id="gYw-5q-mzI"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="CtN-zR-ZsB" secondAttribute="trailing" constant="26" id="kD0-M6-ZY9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="CtN-zR-ZsB" secondAttribute="trailing" constant="30" id="kD0-M6-ZY9"/>
                             <constraint firstItem="0Ch-zo-uFi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="uAn-Dp-QGr"/>
                             <constraint firstItem="Ipu-xd-vvc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="xvJ-jT-tmq"/>
-                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="26" id="zDA-A4-odP"/>
+                            <constraint firstItem="CtN-zR-ZsB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="zDA-A4-odP"/>
                             <constraint firstItem="Ipu-xd-vvc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="znb-lZ-xqh"/>
                         </constraints>
                     </view>
