--- a/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
@@ -17,23 +17,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="123"/>
+            <rect key="frame" x="0.0" y="0.0" width="421" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great Job !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs8-eh-KVU">
-                    <rect key="frame" x="10" y="10" width="373" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great Job!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs8-eh-KVU">
+                    <rect key="frame" x="10" y="10" width="401" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="spc-Un-9pR"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
                     <color key="textColor" systemColor="systemGreenColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzU-iN-xzr">
-                    <rect key="frame" x="30" y="88" width="333" height="35"/>
+                    <rect key="frame" x="30" y="65" width="361" height="35"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="WBZ-Le-Ghg"/>
+                        <constraint firstAttribute="height" constant="35" id="gHg-pM-INH"/>
                     </constraints>
                     <color key="tintColor" name="porcelain"/>
                     <state key="normal" title="Button"/>
@@ -49,15 +49,15 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="UzU-iN-xzr" secondAttribute="bottom" id="51q-4U-AHb"/>
                 <constraint firstAttribute="trailing" secondItem="hs8-eh-KVU" secondAttribute="trailing" constant="10" id="5RM-AB-dIM"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="UzU-iN-xzr" secondAttribute="trailing" constant="30" id="Cun-Qs-J8L"/>
                 <constraint firstItem="hs8-eh-KVU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="EhO-uo-KUz"/>
                 <constraint firstItem="UzU-iN-xzr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="SQO-LY-Cy2"/>
                 <constraint firstItem="hs8-eh-KVU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="bhA-XC-FQ2"/>
-                <constraint firstAttribute="bottom" secondItem="UzU-iN-xzr" secondAttribute="bottom" id="y8b-7C-0HY"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-48.091603053435115" y="-236.97183098591552"/>
+            <point key="canvasLocation" x="-26.717557251908396" y="-167.6056338028169"/>
         </view>
     </objects>
     <resources>
