--- a/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
@@ -17,7 +17,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="421" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="421" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great Job!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs8-eh-KVU">
@@ -30,7 +30,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzU-iN-xzr">
-                    <rect key="frame" x="30" y="65" width="361" height="35"/>
+                    <rect key="frame" x="30" y="60" width="361" height="35"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="gHg-pM-INH"/>
@@ -48,9 +48,10 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="charcoal"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="UzU-iN-xzr" secondAttribute="bottom" id="51q-4U-AHb"/>
                 <constraint firstAttribute="trailing" secondItem="hs8-eh-KVU" secondAttribute="trailing" constant="10" id="5RM-AB-dIM"/>
+                <constraint firstItem="UzU-iN-xzr" firstAttribute="top" secondItem="hs8-eh-KVU" secondAttribute="bottom" constant="20" id="AqY-XP-nk7"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="UzU-iN-xzr" secondAttribute="trailing" constant="30" id="Cun-Qs-J8L"/>
                 <constraint firstItem="hs8-eh-KVU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="EhO-uo-KUz"/>
                 <constraint firstItem="UzU-iN-xzr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="SQO-LY-Cy2"/>
@@ -61,6 +62,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
